# smallcl

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Hello.c  README.01-SETUP.md  README.md  Zero.h  commitlog.tmp.json
src/: Zero.c
